--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -74,7 +74,7 @@ aside {
 }
 
 li figure {
-	transition: all 250ms ease-in-out;
+	transition: all 250ms linear;
 }
 
 li figure:hover {
@@ -82,6 +82,7 @@ li figure:hover {
 }
 
 li figure figcaption {
+	color: #000;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
@@ -127,11 +128,16 @@ li figure:hover figcaption {
 }
 
 .list li {
-	list-style: disc;
-	margin: 5px 15px
+	padding-left: 15px;
+	margin: 5px 0;
 }
 
-.list li span:hover {
+.list li a {
+	color: #000;
+	cursor: pointer;
+}
+
+.list li a:hover {
 	text-shadow: 2px 2px 3px #888;
 }
 
